--- a/index.html
+++ b/index.html
@@ -134,6 +134,22 @@
                     <i class="fas fa-book"></i>
                     <span>Livros</span>
                 </li>
+                <li class="category-item" data-categoria="fitness">
+                    <i class="fas fa-dumbbell"></i>
+                    <span>Fitness</span>
+                </li>
+                <li class="category-item" data-categoria="pet">
+                    <i class="fas fa-paw"></i>
+                    <span>Pet Shop</span>
+                </li>
+                <li class="category-item" data-categoria="jardinagem">
+                    <i class="fas fa-leaf"></i>
+                    <span>Jardinagem</span>
+                </li>
+                <li class="category-item" data-categoria="gastronomia">
+                    <i class="fas fa-utensils"></i>
+                    <span>Gastronomia</span>
+                </li>
             </ul>
         </div>
     </div>
