--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     </div>
                     <div class="store-card amazon" data-loja="amazon">
                         <div class="store-logo">
-                            <img src="https://via.placeholder.com/80x30/ff9900/ffffff?text=Amazon" alt="Amazon">
+                            <img src="logos/amazon.png" alt="Amazon">
                         </div>
                         <span class="store-name">Amazon</span>
                     </div>
