--- a/index.html
+++ b/index.html
@@ -1,224 +1,168 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados." />
-    <meta property="og:title" content="Centro de Compras - Ofertas e Descontos" />
-    <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!" />
-    <meta property="og:image" content="https://via.placeholder.com/1200x630/3483fa/ffffff?text=Centro+de+Compras" />
-    <meta property="og:url" content="https://centrodecompra.com.br/" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <title>Centro de Compras - Ofertas do Dia</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <link rel="stylesheet" href="style.css" />
-    <style>
-        /* Adicione esses estilos ou insira no seu style.css */
-        .products-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            gap: 20px;
-            padding: 20px 0;
-        }
-
-        .product-card {
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            padding: 15px;
-            text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.2s ease-in-out;
-        }
-        .product-card:hover {
-            transform: translateY(-5px);
-        }
-
-        .product-card img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
-
-        .product-name {
-            font-size: 1.1em;
-            margin: 10px 0 5px;
-            color: #333;
-        }
-
-        .product-price {
-            color: #e74c3c;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-
-        .product-link {
-            display: inline-block;
-            padding: 8px 15px;
-            background-color: #3498db;
-            color: #fff;
-            border-radius: 5px;
-            text-decoration: none;
-            font-weight: 600;
-        }
-
-        .product-link:hover {
-            background-color: #2980b9;
-        }
-    </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Centro de Compras - Frontend Exemplo</title>
+<style>
+  body { font-family: Arial, sans-serif; margin: 20px; }
+  #login, #products, #chat { margin-bottom: 30px; }
+  #products { display: flex; flex-wrap: wrap; gap: 10px; }
+  .product-card { border: 1px solid #ccc; padding: 10px; width: 150px; }
+  #messages { border: 1px solid #ccc; height: 150px; overflow-y: auto; padding: 5px; margin-bottom: 10px; }
+</style>
 </head>
 <body>
-    <!-- Seu HTML existente permanece igual até aqui -->
 
-    <!-- Conteúdo Principal -->
-    <main class="main-content">
-        <div class="container">
-            <!-- Outras seções como banner, lojas, etc -->
+<h1>Centro de Compras - Frontend Exemplo</h1>
 
-            <!-- Grid de Produtos -->
-            <section class="products-section">
-                <div class="section-header">
-                    <h2 id="ofertas-titulo"><i class="fas fa-fire"></i> Ofertas do Dia</h2>
-                    <div class="section-actions">
-                        <div class="view-toggle">
-                            <button class="view-btn active" data-view="grid">
-                                <i class="fas fa-th"></i>
-                            </button>
-                            <button class="view-btn" data-view="list">
-                                <i class="fas fa-list"></i>
-                            </button>
-                        </div>
-                        <div class="sort-dropdown">
-                            <select id="sort-select">
-                                <option value="relevance">Mais Relevantes</option>
-                                <option value="price-low">Menor Preço</option>
-                                <option value="price-high">Maior Preço</option>
-                                <option value="newest">Mais Recentes</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="products-grid" id="grid-produtos">
-                    <!-- Produtos da API serão inseridos aqui -->
-                </div>
-                
-                <div class="load-more-container">
-                    <button id="load-more" class="load-more-btn">
-                        <i class="fas fa-plus"></i>
-                        <span>Carregar Mais Produtos</span>
-                    </button>
-                </div>
-            </section>
+<section id="login">
+  <h2>Login</h2>
+  <input id="username" type="text" placeholder="Usuário" />
+  <input id="password" type="password" placeholder="Senha" />
+  <button id="btnLogin">Entrar</button>
+  <p id="loginStatus" style="color:red;"></p>
+</section>
 
-            <!-- Mensagens de Estado (vazio, erro) -->
-            <div class="empty-state" id="mensagem-vazia" style="display:none;">
-                <div class="empty-icon">
-                    <i class="fas fa-search"></i>
-                </div>
-                <h3>Nenhum produto encontrado</h3>
-                <p>Tente ajustar os filtros ou buscar por outros termos</p>
-                <button class="btn-primary" onclick="location.reload()">
-                    <i class="fas fa-refresh"></i>
-                    Limpar Filtros
-                </button>
-            </div>
+<section id="products" style="display:none;">
+  <h2>Produtos</h2>
+  <div id="productsGrid"></div>
+  <button id="btnLoadMore">Carregar Mais</button>
+</section>
 
-            <div class="error-state" id="error-message" style="display:none;">
-                <div class="error-icon">
-                    <i class="fas fa-exclamation-triangle"></i>
-                </div>
-                <h3>Ops! Algo deu errado</h3>
-                <p>Não foi possível carregar os produtos. Verifique sua conexão.</p>
-                <button class="btn-primary" onclick="location.reload()">
-                    <i class="fas fa-redo"></i>
-                    Tentar Novamente
-                </button>
-            </div>
-        </div>
-    </main>
+<section id="chat" style="display:none;">
+  <h2>Chat Socket.io</h2>
+  <div id="messages"></div>
+  <input id="chatInput" type="text" placeholder="Digite uma mensagem" />
+  <button id="sendMsg">Enviar</button>
+</section>
 
-    <!-- Footer, Botão Flutuante e outros permanecem iguais -->
+<script src="https://cdn.socket.io/4.7.1/socket.io.min.js"></script>
+<script>
+  const API_URL = 'https://minha-api-produtos.onrender.com/api';
+  let token = '';
+  let page = 1;
 
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const produtosContainer = document.getElementById('grid-produtos');
-            const loadMoreButton = document.getElementById('load-more');
-            const mensagemVazia = document.getElementById('mensagem-vazia');
-            const errorMessage = document.getElementById('error-message');
+  const loginSection = document.getElementById('login');
+  const productsSection = document.getElementById('products');
+  const chatSection = document.getElementById('chat');
+  const loginStatus = document.getElementById('loginStatus');
+  const productsGrid = document.getElementById('productsGrid');
+  const btnLoadMore = document.getElementById('btnLoadMore');
+  const messagesDiv = document.getElementById('messages');
+  const chatInput = document.getElementById('chatInput');
 
-            let paginaAtual = 1;
-            const limitePorPagina = 10;
-            let carregando = false;
+  // Login
+  document.getElementById('btnLogin').addEventListener('click', async () => {
+    const username = document.getElementById('username').value.trim();
+    const password = document.getElementById('password').value.trim();
+    loginStatus.textContent = '';
 
-            // Função para buscar produtos da API com paginação
-            const fetchProdutos = async (page = 1) => {
-                if (carregando) return;
-                carregando = true;
-                errorMessage.style.display = 'none';
-                mensagemVazia.style.display = 'none';
+    if (!username || !password) {
+      loginStatus.textContent = 'Preencha usuário e senha.';
+      return;
+    }
 
-                try {
-                    const url = `https://minha-api-produtos.onrender.com/produtos?page=${page}&limit=${limitePorPagina}`;
-                    const response = await fetch(url);
-                    if (!response.ok) {
-                        throw new Error('Erro ao buscar produtos');
-                    }
-                    const data = await response.json();
-                    return data; // espera receber array de produtos
-                } catch (error) {
-                    console.error('Erro:', error);
-                    errorMessage.style.display = 'block';
-                    return null;
-                } finally {
-                    carregando = false;
-                }
-            };
+    try {
+      const res = await fetch(API_URL + '/login', {
+        method: 'POST',
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify({ username, password }),
+      });
+      const data = await res.json();
+      if (data.success) {
+        token = data.token;
+        loginSection.style.display = 'none';
+        productsSection.style.display = 'block';
+        chatSection.style.display = 'block';
+        carregarProdutos();
+        iniciarSocket();
+      } else {
+        loginStatus.textContent = 'Usuário ou senha inválidos.';
+      }
+    } catch (err) {
+      loginStatus.textContent = 'Erro ao conectar com a API.';
+      console.error(err);
+    }
+  });
 
-            // Função para renderizar os produtos na página
-            const renderProdutos = (produtos) => {
-                if (!produtos || produtos.length === 0) {
-                    if (paginaAtual === 1) {
-                        mensagemVazia.style.display = 'block';
-                    }
-                    loadMoreButton.style.display = 'none';
-                    return;
-                }
-
-                produtos.forEach(produto => {
-                    const produtoElement = document.createElement('div');
-                    produtoElement.classList.add('product-card');
-                    produtoElement.innerHTML = `
-                        <img src="${produto.imagem || 'https://via.placeholder.com/200x200?text=Sem+Imagem'}" alt="${produto.nome}" class="product-image" />
-                        <h3 class="product-name">${produto.nome}</h3>
-                        <p class="product-price">R$ ${produto.preco.toFixed(2).replace('.', ',')}</p>
-                        <a href="${produto.link}" class="product-link" target="_blank" rel="noopener noreferrer">Ver Oferta</a>
-                    `;
-                    produtosContainer.appendChild(produtoElement);
-                });
-
-                // Mostrar botão carregar mais apenas se retornou limite completo
-                loadMoreButton.style.display = produtos.length < limitePorPagina ? 'none' : 'block';
-            };
-
-            // Carregar primeira página
-            const carregarProdutosIniciais = async () => {
-                const produtos = await fetchProdutos(paginaAtual);
-                renderProdutos(produtos);
-            };
-
-            // Evento botão carregar mais
-            loadMoreButton.addEventListener('click', async () => {
-                paginaAtual++;
-                const produtos = await fetchProdutos(paginaAtual);
-                renderProdutos(produtos);
-            });
-
-            carregarProdutosIniciais();
+  // Carregar produtos
+  async function carregarProdutos() {
+    try {
+      btnLoadMore.disabled = true;
+      const res = await fetch(`${API_URL}/produtos?page=${page}&limit=10`, {
+        headers: {
+          Authorization: 'Bearer ' + token,
+        },
+      });
+      const data = await res.json();
+      if (data.success) {
+        data.data.forEach(prod => {
+          const card = document.createElement('div');
+          card.className = 'product-card';
+          card.innerHTML = `<strong>${prod.nome}</strong><br><small>${prod.descricao || ''}</small>`;
+          productsGrid.appendChild(card);
         });
-    </script>
+        if (data.data.length === 10) {
+          btnLoadMore.disabled = false;
+          page++;
+        } else {
+          btnLoadMore.style.display = 'none';
+        }
+      } else {
+        alert('Erro ao carregar produtos.');
+      }
+    } catch (err) {
+      alert('Erro na requisição.');
+      console.error(err);
+    }
+  }
 
-    <script src="script.js"></script>
+  btnLoadMore.addEventListener('click', carregarProdutos);
+
+  // Socket.io
+  let socket;
+  function iniciarSocket() {
+    socket = io('https://minha-api-produtos.onrender.com', {
+      withCredentials: true,
+      extraHeaders: {
+        Origin: window.location.origin
+      }
+    });
+
+    socket.on('connect', () => {
+      console.log('Conectado ao socket:', socket.id);
+      addMessage('Conectado ao chat.');
+    });
+
+    socket.on('mensagem', (msg) => {
+      addMessage('Outro: ' + msg);
+    });
+
+    socket.on('disconnect', () => {
+      addMessage('Desconectado do chat.');
+    });
+
+    socket.on('connect_error', (err) => {
+      addMessage('Erro no socket: ' + err.message);
+    });
+  }
+
+  document.getElementById('sendMsg').addEventListener('click', () => {
+    const msg = chatInput.value.trim();
+    if (!msg) return;
+    socket.emit('mensagem', msg);
+    addMessage('Você: ' + msg);
+    chatInput.value = '';
+  });
+
+  function addMessage(text) {
+    const p = document.createElement('p');
+    p.textContent = text;
+    messagesDiv.appendChild(p);
+    messagesDiv.scrollTop = messagesDiv.scrollHeight;
+  }
+</script>
+
 </body>
 </html>
